--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -378,6 +378,7 @@ a {
     margin-bottom: 20px;
     font-size: 2em;
     margin-top:20px;
+    word-break:break-all;
   }
   .field-name-field-afbeelding {
     img {
