--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -456,7 +456,8 @@ a {
   text-transform: uppercase;
   margin-bottom: 20px;
   font-size: 2em;
-  margin-top: 20px; }
+  margin-top: 20px;
+  word-break: break-all; }
 .entity-paragraphs-item .field-name-field-afbeelding img {
   float: left; }
 .entity-paragraphs-item .field-name-field-video iframe {
