--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1303,16 +1303,20 @@ ul#superfish-1 li ul {
 .field-collection-item-field-event {
   border-bottom: 1px solid #f78b1f;
   padding-bottom: 50px; }
-  .field-collection-item-field-event .group-right .field-name-field-cta {
-    background-color: #f78b1f;
-    padding: 10px 20px; }
-    .field-collection-item-field-event .group-right .field-name-field-cta a {
-      font-size: 18px;
-      font-weight: 700;
-      color: #fff;
-      text-transform: uppercase; }
+  .field-collection-item-field-event .group-right {
+    width: 100%; }
+    .field-collection-item-field-event .group-right .field-name-field-cta {
+      background-color: #f78b1f;
+      padding: 10px 20px; }
+      .field-collection-item-field-event .group-right .field-name-field-cta a {
+        font-size: 18px;
+        font-weight: 700;
+        color: #fff;
+        text-transform: uppercase; }
+  .field-collection-item-field-event .group-left {
+    width: 100%; }
   .field-collection-item-field-event .field-collection-item-field-afbeeldingen {
-    width: 25%;
+    width: 100%;
     float: left; }
     .field-collection-item-field-event .field-collection-item-field-afbeeldingen .field-name-field-titel {
       font-size: 15px;
