--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -110,4 +110,26 @@
     font-size: 18px;
     padding: 0px 11px; }
 
+.region-footer-first .block-menu {
+  display: inline; }
+  .region-footer-first .block-menu li {
+    float: left;
+    width: 25%;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none; }
+    .region-footer-first .block-menu li a {
+      color: #fff;
+      font-size: 16px; }
+    .region-footer-first .block-menu li ul li {
+      float: none;
+      width: 100%;
+      height: auto; }
+      .region-footer-first .block-menu li ul li a {
+        font-size: 12px;
+        font-weight: 100; }
+  .region-footer-first .block-menu li.last {
+    height: auto; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
