--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -79,6 +79,8 @@
   .field-name-field-videos {
     .field-items {
       .field-item {
+        width:33.3%;
+        float:left;
         iframe {
           width:297px;
           height:231px;
