--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -47,9 +47,12 @@
 .block-filmrecruitz-block .views-row {
   width: 89%; }
 
-.paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
-  width: 297px;
-  height: 231px; }
+.paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item {
+  width: 33.3%;
+  float: left; }
+  .paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
+    width: 297px;
+    height: 231px; }
 
 .paragraphs-item-2-kolommen-tekst-video .group-right .field-name-field-video .field-items .field-item iframe {
   width: 317px;
