--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1327,6 +1327,6 @@ ul#superfish-1 li ul {
     padding-top: 43px; }
 
 .zone-preface-wrapper {
-  margin-top: 44px; }
+  padding-top: 44px; }
 
 /*# sourceMappingURL=global.css.map */
