--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -536,7 +536,8 @@
 
 .view-id-cast_crew {
   .views-row {
-    width:25%;
+    width:20%;
+    margin-right:5%;
   }
   .views-field-field-naam {
     display: none;
@@ -551,7 +552,7 @@
   }
   .views-field-field-profielfoto {
     margin-top: -300px;
-    width:83%;
+    width:100%;
   }
 }
 
