--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -388,7 +388,8 @@
   width: 100%; }
 
 .view-id-cast_crew .views-row {
-  width: 25%; }
+  width: 20%;
+  margin-right: 5%; }
 .view-id-cast_crew .views-field-field-naam {
   display: none;
   position: absolute;
@@ -401,7 +402,7 @@
   border-bottom: 1px solid; }
 .view-id-cast_crew .views-field-field-profielfoto {
   margin-top: -300px;
-  width: 83%; }
+  width: 100%; }
 
 .block-views-exp-cast-crew-page-1 {
   width: 100%;
