--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1329,4 +1329,7 @@ ul#superfish-1 li ul {
 .zone-preface-wrapper {
   padding-top: 44px; }
 
+.tips {
+  margin-top: -10px; }
+
 /*# sourceMappingURL=global.css.map */
