--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -862,6 +862,9 @@ input[type="submit"] {
 }
 
 .node-crew-cast {
+  .group-right {
+    color:$blue;
+  }
   .field-name-field-naam {
      font-size:24px;
      color:#000;
