--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -438,7 +438,9 @@
 .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-left {
   width: 33%; }
 .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-right {
-  width: 66%; }
+  width: 67%; }
+  .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-right img {
+    float: rig; }
 
 .field-name-field-tekst-3-kolommen .field-items .field-item {
   width: 33.3%; }
