--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -440,7 +440,7 @@
 .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-right {
   width: 67%; }
   .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 .group-right img {
-    float: rig; }
+    float: right; }
 
 .field-name-field-tekst-3-kolommen .field-items .field-item {
   width: 33.3%; }
