--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -226,6 +226,9 @@ a {
 }
 
 .context-contact {
+  #search-block-form input[type="submit"] {
+    top:0;
+  }
   .zone-postscript {
     width:100%;
   }
