--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -227,7 +227,7 @@ a {
 
 .context-contact {
   #search-block-form input[type="submit"] {
-    top:0;
+    top:-2px;
   }
   .zone-postscript {
     width:100%;
