--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -728,7 +728,7 @@ input[type="submit"] {
 
 #search-block-form {
   width:40%;
-  float:left;
+  float:right;
   position:relative;
 }
 
@@ -1027,7 +1027,7 @@ input[type="submit"] {
 }
 
 .block-search {
-  display:block;
+  display:inline-block;
   width:100%;
 }
 
@@ -1146,6 +1146,9 @@ input[type="submit"] {
     width:21%;
     float:right;
     margin-top:3px;
+    p {
+      margin:0;
+    }
 
     a {
       font-size:1px;
