--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1338,4 +1338,8 @@ ul#superfish-1 li ul {
 .tips {
   margin-top: -21px; }
 
+.front .paragraphs-item-3-kolommen-tekst-video-tekst {
+  margin-bottom: 0;
+  padding-bottom: 0; }
+
 /*# sourceMappingURL=global.css.map */
