--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1617,3 +1617,10 @@ ul#superfish-1 li {
 .tips {
   margin-top:-21px;
 }
+
+.front {
+  .paragraphs-item-3-kolommen-tekst-video-tekst {
+    margin-bottom:0;
+    padding-bottom:0;
+  }
+}
