--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -568,6 +568,7 @@
   .form-item-field-categorie-crew-tid {
     padding: 3px 10px;
     margin: 0 5px;
+    margin-bottom:10px;
   }
   .form-item-field-categorie-crew-tid.active {
     padding: 3px 10px;
