--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1047,6 +1047,10 @@ input[type="submit"] {
         padding-bottom:18px;
       }
     }
+    .field-name-field-afbeelding2 {
+      display:inline-block;
+      padding-bottom:10px;
+    }
     .field-name-field-link-filmrecruitz {
       float:right;
       width:100%;
