--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -939,8 +939,7 @@ input[type="submit"] {
     .field-name-field-content .field-item .field-name-field-titel .field-item {
       padding-bottom: 18px; }
   .field-name-field-content .field-item .field-name-field-afbeelding2 {
-    display: inline-block;
-    padding-bottom: 10px; }
+    display: inline-block; }
   .field-name-field-content .field-item .field-name-field-link-filmrecruitz {
     float: right;
     width: 100%;
