--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -973,6 +973,9 @@ input[type="submit"] {
   .field-name-field-tekst {
     padding:0 15px;
   }
+  .field-name-field-afbeelding2 {
+    display:inline-block;
+  }
 }
 
 .paragraphs-item-links-titels-rechts-quote {
