--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -882,7 +882,8 @@ input[type="submit"] {
 .paragraphs-item-jury .field-name-field-tekst {
   padding: 0 15px; }
 .paragraphs-item-jury .field-name-field-afbeelding2 {
-  display: inline-block; }
+  display: inline-block;
+  padding-bottom: 5px; }
 
 .paragraphs-item-links-titels-rechts-quote {
   margin-bottom: 50px; }
