--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -499,7 +499,8 @@
       text-align: center;
       font-weight: 700;
       width: 89%;
-      margin: 0 auto; }
+      margin: 0 auto;
+      height: 53px; }
   .field-collection-item-field-event .group-footer {
     padding-top: 43px; }
 
