--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -504,4 +504,8 @@
   .field-collection-item-field-event .group-footer {
     padding-top: 43px; }
 
+.paragraphs-item-2-kolommen-tekst-afbeelding-link .group-right {
+  box-sizing: border-box;
+  padding-right: 20px; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
