--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -705,3 +705,10 @@
     padding-top: 43px;
   }
 }
+
+.paragraphs-item-2-kolommen-tekst-afbeelding-link {
+  .group-right {
+    box-sizing:border-box;
+    padding-right:20px;
+  }
+}
