--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -504,7 +504,7 @@
   .field-collection-item-field-event .group-footer {
     padding-top: 43px; }
 
-.paragraphs-item-2-kolommen-tekst-afbeelding-link .group-right {
+.paragraphs-item-2-kolommen-tekst-afbeelding-link .group-left {
   box-sizing: border-box;
   padding-right: 20px; }
 
