--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -707,7 +707,7 @@
 }
 
 .paragraphs-item-2-kolommen-tekst-afbeelding-link {
-  .group-right {
+  .group-left {
     box-sizing:border-box;
     padding-right:20px;
   }
