--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1176,7 +1176,9 @@ a.blue {
 a.orange {
   background-color: #f78b1f;
   padding: 10px;
-  color: #fff; }
+  color: #fff;
+  display: inline-block;
+  width: 87%; }
 
 .entity-paragraphs-item .field-name-field-2titel {
   font-weight: 700;
