--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -298,7 +298,7 @@ a {
   display: none; }
 
 .views-field-field-banner {
-  display: none; }
+  display: inline-block; }
 
 /* Nieuws */
 .block-superfish-2, .block-superfish-3 {
