--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1269,7 +1269,7 @@ ul#superfish-1 li ul {
       margin: 0;
       margin-top: 17px;
       padding: 0;
-      color: #fff;
+      color: #f78b1f;
       text-transform: none;
       font-weight: 300; }
     ul#superfish-1 li ul li a.active {
