--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1511,7 +1511,7 @@ ul#superfish-1 li {
         margin: 0;
         margin-top:17px;
         padding: 0;
-        color: #fff;
+        color: $orange;
         text-transform: none;
         font-weight:300;
       }
