--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -202,7 +202,7 @@ a {
   background-color: #000; }
 
 #zone-branding-wrapper {
-  padding: 20px 0 3px 0;
+  padding: 20px 0 px 0;
   background-color: #fff; }
 
 #zone-header {
