--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -75,8 +75,20 @@ a {
 }
 
 #superfish-1-select {
-  background-color:#000;
-  color:#fff;
+  background: #94d600 url("../css/img/hamburger-menu-icon.png") no-repeat 10px center;
+  background-size: 20px;
+  color: #000;
+  position: relative;
+  float: right;
+  padding: 18px 20px;
+  margin-top: 40px;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  border-color: #ddd;
+  font-size: 0;
 }
 
 /* Slideshow */
