--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -80,8 +80,8 @@ a {
   color: #000;
   position: relative;
   float: right;
-  padding: 18px 20px;
-  margin-top: 40px;
+  padding: 18px 12px;
+  margin-top: 7px;
   margin-right: 15px;
   margin-bottom: 8px;
   background-color: transparent;
@@ -89,6 +89,10 @@ a {
   border-radius: 4px;
   border-color: #ddd;
   font-size: 0;
+}
+
+.block-superfish-1 {
+  float:right;
 }
 
 /* Slideshow */
