--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -722,3 +722,11 @@
   box-sizing: border-box;
   padding-left: 10px;
 }
+
+.paragraphs-item-2-kolommen-tekst-afbeelding-rech {
+  .group-right {
+    .field-name-field-afbeedling-rechts {
+      float:right;
+    }
+  }
+}
