--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -517,4 +517,7 @@
   box-sizing: border-box;
   padding-left: 10px; }
 
+.paragraphs-item-2-kolommen-tekst-afbeelding-rech .group-right .field-name-field-afbeedling-rechts {
+  float: right; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
