--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -152,6 +152,19 @@ a {
   }
 }
 
+.owl-prev {
+  display: block;
+  position: absolute;
+  top: 32%;
+  left: 0px;
+  z-index: 100;
+  background: url("img/la.jpg") no-repeat center;
+  background-size: 16px;
+  width: 41px;
+  height: 100px;
+  text-indent: -9999px;
+}
+
 /* Banner */
   .field-name-field-quotes {
     display:none;
