--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -311,7 +311,7 @@ a {
   top: 32%;
   left: 0px;
   z-index: 100;
-  background: url("img/la.jpg") no-repeat center;
+  background: url("img/la.jpg") no-repeat center !important;
   background-size: 16px;
   width: 41px;
   height: 100px;
