--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -315,7 +315,14 @@ a {
   background-size: 16px;
   width: 41px;
   height: 100px;
-  text-indent: -9999px; }
+  text-indent: -9999px;
+  margin: 0;
+  padding: 0;
+  border-radius: 0;
+  opacity: 0; }
+
+.owl-prev:hover {
+  opacity: 0.5; }
 
 /* Banner */
 .field-name-field-quotes {
