--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -316,10 +316,10 @@ a {
   width: 41px;
   height: 100px;
   text-indent: -9999px;
-  margin: 0;
-  padding: 0;
-  border-radius: 0;
-  opacity: 0; }
+  margin: 0 !important;
+  padding: 0 !important;
+  border-radius: 0 !important;
+  opacity: 0 !important; }
 
 .owl-prev:hover {
   opacity: 0.5; }
