--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -186,8 +186,8 @@ a {
   opacity:1!important;
 }
 
-.owl-prev:hover, .owl-next:hover {
-  opacity:0.5;
+.owl-prev:hover {
+  opacity:0.5!important;
 }
 
 /* Banner */
