--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -190,6 +190,10 @@ a {
   opacity:0.5!important;
 }
 
+.owl-next:hover {
+  opacity:0.5!important;
+}
+
 /* Banner */
   .field-name-field-quotes {
     display:none;
