--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -340,6 +340,9 @@ a {
 .owl-prev:hover {
   opacity: 0.5 !important; }
 
+.owl-next:hover {
+  opacity: 0.5 !important; }
+
 /* Banner */
 .field-name-field-quotes {
   display: none; }
