--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -62,7 +62,7 @@
   float: right;
   .views-row {
     margin-bottom:6px;
-    width:88%;
+    //width:88%;
     padding:4px;
     position:relative;
     background-color: rgb(0, 0, 0);
