--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -20,7 +20,7 @@
 .block-news-frontpage-block {
   .views-row {
     margin-bottom:8px;
-    width:92%;
+    //width:92%;
     padding:6px;
   }
   .views-field-view-node a {
