--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -13,13 +13,15 @@
   font-weight: 700;
   line-height: 1.1; }
 
-.block-news-frontpage-block .views-row {
-  margin-bottom: 8px;
-  padding: 6px; }
-.block-news-frontpage-block .views-field-view-node a {
-  width: 36px;
-  height: 40px;
-  background-size: 37px; }
+.block-news-frontpage-block {
+  right: 110px; }
+  .block-news-frontpage-block .views-row {
+    margin-bottom: 8px;
+    padding: 6px; }
+  .block-news-frontpage-block .views-field-view-node a {
+    width: 36px;
+    height: 40px;
+    background-size: 37px; }
 
 .view-zinema .views-row {
   width: 33.3%; }
