--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -255,7 +255,7 @@ a {
   font-size: 0; }
 
 .block-superfish-1 {
-  float: right; }
+  float: left; }
 
 /* Slideshow */
 #block-views-sponsoren-block {
