--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -273,7 +273,7 @@
     cursor: pointer;
     position:relative;
     margin-bottom: 8px;
-    width: 85%;
+    //width: 85%;
     padding: 12px;
     background-color: rgba(70, 136, 200, 0.7);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
