--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -263,10 +263,10 @@
 
 .block-filmrecruitz-block {
   display: inline-block;
-  width: 50%;
+  width: 29%;
   position: absolute;
-  right: 0;
-  top: 19%;
+  right: 19%;
+  top: 10%;
   float: left;
   z-index: 100;
   .views-row {
