--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1659,3 +1659,12 @@ ul#superfish-1 li {
   }
 }
 
+#block-system-main{
+  .view-cast-crew{
+    .views-row{
+      width: 25%;
+      float:left;
+      margin-bottom: 20px;
+    }
+  }
+}
