--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1665,6 +1665,13 @@ ul#superfish-1 li {
       width: 25%;
       float:left;
       margin-bottom: 20px;
+      margin-right: 20px;
+    }
+    .views-row-4{
+      margin-right: 0;
+    }
+    .views-row-5{
+      clear:left;
     }
   }
 }
