--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1375,10 +1375,15 @@ ul#superfish-1 li ul {
   display: inline !important; }
 
 #block-system-main .view-cast-crew .views-row {
-  width: 25%;
+  position: relative;
+  width: 23.73%;
   float: left;
   margin-bottom: 20px;
   margin-right: 20px; }
+  #block-system-main .view-cast-crew .views-row .views-field-title {
+    position: absolute;
+    top: 0;
+    z-index: 997; }
 #block-system-main .view-cast-crew .views-row-4 {
   margin-right: 0; }
 #block-system-main .view-cast-crew .views-row-5 {
