--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1662,10 +1662,16 @@ ul#superfish-1 li {
 #block-system-main{
   .view-cast-crew{
     .views-row{
-      width: 25%;
+      position: relative;
+      width: 23.73%;
       float:left;
       margin-bottom: 20px;
       margin-right: 20px;
+      .views-field-title{
+        position: absolute;
+        top: 0;
+        z-index: 997;
+      }
     }
     .views-row-4{
       margin-right: 0;
