--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1381,6 +1381,11 @@ ul#superfish-1 li ul {
   margin-bottom: 20px;
   margin-right: 20px; }
   #block-system-main .view-cast-crew .views-row .views-field-title {
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -1388,8 +1393,17 @@ ul#superfish-1 li ul {
     top: 0;
     z-index: 997;
     background: transparent; }
+    #block-system-main .view-cast-crew .views-row .views-field-title a {
+      -webkit-transition: all 0.3s ease;
+      -moz-transition: all 0.3s ease;
+      -ms-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      transition: all 0.3s ease;
+      color: transparent; }
   #block-system-main .view-cast-crew .views-row .views-field-title:hover {
     background: rgba(70, 77, 255, 0.49); }
+    #block-system-main .view-cast-crew .views-row .views-field-title:hover a {
+      color: #fff; }
 #block-system-main .view-cast-crew .views-row-4 {
   margin-right: 0; }
 #block-system-main .view-cast-crew .views-row-5 {
