--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1668,6 +1668,11 @@ ul#superfish-1 li {
       margin-bottom: 20px;
       margin-right: 20px;
       .views-field-title{
+        -webkit-transition: all 0.3s ease;
+        -moz-transition: all 0.3s ease;
+        -ms-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        transition: all 0.3s ease;
         width: 100%;
         height: 100%;
         text-align: center;
@@ -1675,11 +1680,22 @@ ul#superfish-1 li {
         position: absolute;
         top: 0;
         z-index: 997;
+        a{
+          -webkit-transition: all 0.3s ease;
+          -moz-transition: all 0.3s ease;
+          -ms-transition: all 0.3s ease;
+          -o-transition: all 0.3s ease;
+          transition: all 0.3s ease;
+          color: transparent;
+        }
 
         background: transparent;
       }
       .views-field-title:hover{
         background: rgba(70, 77, 255, 0.49);
+        a{
+          color: #fff;
+        }
       }
     }
     .views-row-4{
