--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1668,6 +1668,10 @@ ul#superfish-1 li {
       margin-bottom: 20px;
       margin-right: 20px;
       .views-field-title{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         -webkit-transition: all 0.3s ease;
         -moz-transition: all 0.3s ease;
         -ms-transition: all 0.3s ease;
