--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1407,9 +1407,181 @@ ul#superfish-1 li ul {
     background: rgba(70, 77, 255, 0.49); }
     #block-system-main .view-cast-crew .views-row .views-field-title:hover a {
       color: #fff; }
-#block-system-main .view-cast-crew .views-row-4 {
+#block-system-main .view-cast-crew .view-row-4 {
   margin-right: 0; }
-#block-system-main .view-cast-crew .views-row-5 {
+#block-system-main .view-cast-crew .view-row-8 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-12 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-16 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-20 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-24 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-28 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-32 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-36 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-40 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-44 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-48 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-52 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-56 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-60 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-64 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-68 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-72 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-76 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-80 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-84 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-88 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-92 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-96 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-100 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-104 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-108 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-112 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-116 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-120 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-124 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-128 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-132 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-136 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-140 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-144 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-148 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-152 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-156 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-160 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-164 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-168 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-172 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-176 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-180 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-184 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-188 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-192 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-196 {
+  margin-right: 0; }
+#block-system-main .view-cast-crew .view-row-5 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-10 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-15 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-20 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-25 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-30 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-35 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-40 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-45 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-50 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-55 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-60 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-65 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-70 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-75 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-80 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-85 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-90 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-95 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-100 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-105 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-110 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-115 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-120 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-125 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-130 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-135 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-140 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-145 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-150 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-155 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-160 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-165 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-170 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-175 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-180 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-185 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-190 {
+  clear: left; }
+#block-system-main .view-cast-crew .view-row-195 {
   clear: left; }
 
 /*# sourceMappingURL=global.css.map */
