--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1702,11 +1702,21 @@ ul#superfish-1 li {
         }
       }
     }
-    .views-row-4{
-      margin-right: 0;
+
+    $int: 4;
+    @while $int < 200{
+      .view-row-#{$int}{
+        margin-right: 0;
+        $int: $int + 4;
+      }
     }
-    .views-row-5{
-      clear:left;
+
+    $int: 5;
+    @while $int < 200{
+      .view-row-#{$int}{
+        clear:left;
+        $int: $int + 5;
+      }
     }
   }
 }
